added quest seceltor for grid

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Score: <span id = 'score'> 0 </span>
     </h3>
 
-    <button>Start/Pause</button>
+    <button id="start-button">Start/Pause</button>
 
     <div class="grid"> 
       <div></div>
