added move down function and 10 more divs with class taken

--- a/index.html
+++ b/index.html
@@ -217,7 +217,17 @@
       <div></div>
       <div></div>
       <div></div>
-      <div></div>
+      <div></div>      
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
+      <div class = "taken"></div>
 
     </div>
 
